# 05-SS

./: README.md
01-meme/: .env.example  .gitignore  README.md  hardhat.config.js  package-lock.json  package.json  作业完成总结.md  学习路线图.md  实战练习题.md  快速开始.md
01-meme/contracts/: IShibaMeme.sol  IVulnerableToken.sol  ShibaMemeToken.sol  VulnerableToken.sol  limitToken.sol  myFirstToken.sol  myToken.sol  tokenTax.sol
01-meme/contracts/mymeme/: IShibToken.sol  ShibToken.sol  ShibaMemeToken代码详解.md
01-meme/contracts/mymeme/mocks/: UniswapV3Mock.sol
01-meme/docs/: 理论知识分析.md
01-meme/scripts/: addLiquidity.js  deploy.js  interact.js
01-meme/test/: ShibaMemeToken.test.js  limitToken.test.js  myFirstToken.test.js  myToken.test.js  shibtoken.test.js  testAble.test.js  tokenTax.test.js
02-stake/: .env.example  .gitignore  README.md  STAKE_SYSTEM_ANALYSIS.md  TEST_GUIDE.md  hardhat.config.js  package-lock.json  package.json  使用示例.md  部署教程.md  项目完善总结.md
02-stake/contracts/: MetaNodeToken.sol  StakePool.sol  StakePoolV2.sol  TestToken.sol
02-stake/scripts/: deploy.js  interact.js  upgrade.js
02-stake/test/: Enhanced.test.js  Security.test.js  StakePool.test.js
03-foundry/: GAS_ANALYSIS_REPORT.md  TASK.md
03-foundry/my_project/src/: ArithmeticCalculator.sol  OptimizedArithmeticCalculatorV1.sol  OptimizedArithmeticCalculatorV2.sol
03-foundry/my_project/test/: ArithmeticCalculator.t.sol  Counter.t.sol  OptimizedArithmeticCalculatorV1.t.sol  OptimizedArithmeticCalculatorV2.t.sol
04-Substrate/: GUIDE.md  PROJECT_STRUCTURE.md  README.md  SUBMISSION_SUMMARY.md  TASK04.md  THEORY_ANSWERS.md  TIMELINE.md
04-Substrate/docs/: solana-implementation-guide.md  solana-theory.md  substrate-implementation-guide.md  substrate-theory.md
04-Substrate/solana/: Cargo.toml  README.md
04-Substrate/solana/src/: lib.rs  main.rs  tests.rs
04-Substrate/substrate/: Cargo.toml  README.md
04-Substrate/substrate/pallets/voting/: Cargo.toml
04-Substrate/substrate/pallets/voting/src/: lib.rs
04-Substrate/substrate/src/: lib.rs
