[package]
name = "solana-spl-token"
version = "0.1.0"
edition = "2021"
description = "SPL Token Program for Solana blockchain"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.18.4"
spl-token = "4.0.0"
spl-associated-token-account = "2.0.0"
thiserror = "1.0"
borsh = "0.10.3"
num-derive = "0.3"
num-traits = "0.2"

[dev-dependencies]
solana-program-test = "1.18.4"
solana-sdk = "1.18.4"
tokio = { version = "1", features = ["full"] }

[features]
no-entrypoint = []
test-bpf = []
